--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 node_modules/
+dist/
 source/
 temp/
+oldFiles/
 *-template.md
 styles.css
 # https://git-scm.com/book/en/v2/Git-Basics-Recording-Changes-to-the-Repository#_ignoring
